# zkNARK

./: Cargo.toml
r1cs-nark/: Cargo.toml
r1cs-nark/src/: lib.rs  pedersen.rs  r1cs.rs  traits.rs  transcript.rs
