[package]
name = "zk-nark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poseidon = { path = "../../poseidon" }
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves.git', tag = "0.3.1" }
multiexp = "0.3.1"
rand = "0.8.5"
